DRAFT-k8s-deployment.yml
###################################
# users
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    app: users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: us-central1-docker.pkg.dev/miso-first-project-396722/grupo17-registry/users:1.0
          ports:
            - containerPort: 3000
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: service-users
  annotations:
    cloud.google.com/backend-config: '{"default": "grupo17-users-config"}'
spec:
  type: NodePort
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31019

---
###################################
# MULTIPLICACION
###################################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: multiplicacion
  labels:
    app: multiplicacion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multiplicacion
  template:
    metadata:
      labels:
        app: multiplicacion
    spec:
      containers:
        - name: multiplicacion
          image: <IMAGE-URI>
          ports:
            - containerPort: 4000
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: servicio-multiplicacion
  annotations:
    cloud.google.com/backend-config: '{"default": "calculadora-numeros-multiplicacion-config"}'
spec:
  type: NodePort
  selector:
    app: multiplicacion
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
      nodePort: 31017

###################################
# INGRESS
###################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress-8
  labels:
    name: gateway-ingress-8
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /suma
        backend:
          service:
            name: servicio-suma
            port:
              number: 80
      - pathType: Prefix
        path: /multiplicar
        backend:
          service:
            name: servicio-multiplicacion
            port:
              number: 80
